Challenge #1: transport 15 people in 60 seconds solved

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         elevator.on("idle", function() {
             // let's go to all the floors (or did we forget one?)
             elevator.goToFloor(0);
+            elevator.goToFloor(2);
             elevator.goToFloor(1);
         });
     },
